[tool.poetry]
name = "wallet"
version = "0.1.0"
description = ""
authors = ["elenaglu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
